syntax="proto3";

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

service PrimeNumberDecompositionService {
    rpc DecomposePrime(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
}